force-app/main/default/objects/PgM_Team_Assignment__c/PgM_Team_Assignment__c.object-meta.xml
<CustomObject>
    <label>Team Assignment</label>
    <nameField>
        <displayFormat>TA-{000}</displayFormat>
        <label>Assignment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>