force-app/main/default/objects/PgM_Team_Assignment__c/fields/Committee__c.field-meta.xml
<CustomField>
    <fullName>Committee__c</fullName>
    <label>Committee</label>
    <referenceTo>PgM_Team__c</referenceTo>
    <relationshipName>Committee_Assignments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>