force-app/main/default/objects/PgM_Team_Assignment__c/fields/PgM_Role__c.field-meta.xml
<CustomField>
    <fullName>PgM_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Role</label>
    <referenceTo>PgM_Role__c</referenceTo>
    <relationshipName>Committee_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>