force-app/main/default/objects/PgM_Team_Assignment__c/fields/PgM_Roster__c.field-meta.xml
<CustomField>
    <fullName>PgM_Roster__c</fullName>
    <label>Roster</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>PgM_Roster__c.PgM_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PgM_Roster__c</referenceTo>
    <relationshipName>Committee_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>